--- a/conf/pierremancini.conf
+++ b/conf/pierremancini.conf
@@ -55,7 +55,13 @@ server {
 }
 
 server {
-    server_name _;
-    listen *:80 default_server deferred;
-    return 444;
+  server_name _;
+  listen [::]:443 ssl default_server; # managed by Certbot
+  listen 443 ssl; # managed by Certbot default_server deferred;
+  return 444;
+
+  ssl_certificate /etc/letsencrypt/live/pierremancini.fr/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/pierremancini.fr/privkey.pem; # managed by Certbot
+  include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 }
